<resources>
    <string name="app_name">Alert To Go Down</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="textViewOnibus">Bus</string>
    <string name="activityCreateAlert">Create Alert</string>
    <string name="bus">Bus</string>
    <string name="buttonStop">Search Stop</string>
    <string name="textViewPeriodAlert">Alert Period</string>
    <string name="buttonCreateAlert">Create Alert</string>
    <string name="editTextBus">Bus</string>
    <string name="editTextStop">Bus Stop</string>
    <string name="editTextAlertPeriod">Alert Period</string>
    <string name="buttonSerachAlert">Search Alert</string>
    <string name="buttonCreate">Create Alert</string>
    <string name="buttonRun">Run</string>
</resources>
